--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-rating-stars-component": "^2.2.0",
+    "react-toastify": "^8.0.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
