--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-rating-stars-component": "^2.2.0",
+    "react-spring": "^9.2.4",
     "react-toastify": "^8.0.2"
   },
   "devDependencies": {
